<resources>
    <string name="app_name">Brewtility</string>
    <string name="tab_text_1">ABV Calculator</string>
    <string name="tab_text_2">Gravity Temperature Converter</string>
    <string name="startingGravity">Starting Gravity</string>
    <string name="finalGravity">Final Gravity</string>
    <string name="abvCalcButton">Calculate ABV</string>
    <string name="abvLabel">Final Alcohol By Volume (%):</string>
    <string name="hydrometerConverterLabel">Converted hydrometer reading:</string>
    <string name="hydrometerInitialReading">Initial Reading</string>
    <string name="hydrometerActualTemp">Actual Temperature</string>
    <string name="hydrometerCalibrationTemp">Calibration Temperature</string>
    <string name="hydrometerCalcButton">Get Corrected Reading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>