<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:maxHeight="300dp"
    android:visibility="visible"
    app:layout_anchorGravity="center|center_horizontal|center_vertical"
    app:layout_collapseMode="pin"
    app:layout_constraintBaseline_toBaselineOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    tools:context=".fragments.ABVCalcFragment"
    tools:visibility="visible">

    <Button
        android:id="@+id/btnCalcAbv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/abvCalcButton"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nmbrFinalGravity"
        android:onClick="calcAbv"/>

    <EditText
        android:id="@+id/nmbrStartingGravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/startingGravity"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nmbrFinalGravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/finalGravity"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nmbrStartingGravity" />

    <TextView
        android:id="@+id/txtAbvOutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/abvLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalcAbv" />

    <TextView
        android:id="@+id/txtAbvOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/txtAbvOutLabel"
        app:layout_constraintTop_toBottomOf="@id/btnCalcAbv"
        tools:layout_constraintTop_toBottomOf="@id/btnCalcAbv" />
</androidx.constraintlayout.widget.ConstraintLayout>